# Redactron_II

./: .gitignore  CLAUDE.md  README.md  RedactQC.spec  package-lock.json  pyproject.toml  run.py  setup-and-run.bat  setup-and-run.ps1  start-dev.sh
backend/api/: __main__.py  main.py
backend/api/routes/: batches.py  dashboard.py  documents.py  reports.py
backend/api/schemas/: models.py
backend/core/: config.py  database.py  security.py
backend/processing/: batch_manager.py  detector.py  extractor.py  pipeline.py  worker_pool.py
backend/processing/recognizers/: digital_pii.py  financial_pii.py  government_id.py  legal_pii.py  medical_pii.py
backend/reports/: csv_export.py  generator.py  pdf_report.py
backend/tests/: test_detector.py  test_extractor.py  test_pipeline.py  test_recognizers.py
docs/: ARCHITECTURE.md  DESIGN.md  DEVELOPMENT.md  PII_TYPES.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: BatchCard.tsx  ConfidenceBar.tsx  DocumentTable.tsx  FilterPanel.tsx  FindingsList.tsx  PIIBadge.tsx  StatsOverview.tsx
frontend/src/pages/: BatchDetailPage.tsx  DashboardPage.tsx  DocumentPage.tsx  ReportsPage.tsx
frontend/src/types/: index.ts
scripts/: build.py  count_redaction_boxes.py  setup_models.py
